# discordplugapi

./: .gitignore  README.md  launch.sh  main.py  pyproject.toml  requirements.txt  utilities.py
